--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,10 +1,12 @@
+{{#md-navbar name='Planet Express Blog'}}
+
+{{/md-navbar}}
 <div class="row pe-blog-app">
 
-  <div class="col s2 left-side">
+  <div class="col s3 left-side">
     {{#link-to 'index'}}<img src="/images/pe-logo.png">{{/link-to}}
   </div>
-  <div class="col s8 content-pane">
-    <h2 id="title">Planet Express Blog</h2>
+  <div class="col s7 content-pane">
     {{outlet}}
   </div>
 
