--- a/app/templates/author/index.hbs
+++ b/app/templates/author/index.hbs
@@ -3,7 +3,7 @@
     {{#link-to 'author.post' post}}
       <li>
         <h3>{{post.title}}</h3>
-        <h5>Posted at {{post.date}} by {{post.author.name}}</h5>
+        <p>Posted at {{post.date}} by {{post.author.name}}</p>
       </li>
     {{/link-to}}
   {{/each}}
