--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,7 +4,7 @@
     {{#link-to 'post' post}}
       <li>
         <h3>{{post.title}}</h3>
-        <h5>Posted at {{post.date}} by {{post.author.name}}</h5>
+        <p>Posted at {{post.date}} by {{post.author.name}}</p>
       </li>
     {{/link-to}}
   {{/each}}
