--- a/app/templates/post.hbs
+++ b/app/templates/post.hbs
@@ -2,5 +2,5 @@
   <h1>{{model.title}}</h1>
   <h5>Posted at {{model.date}} by {{model.author.name}}</h5>
   <img src={{model.author.image}}>
-  <p>{{model.content}}</p>
+  {{{model.content}}}
 </div>
